# haskell_katas

./: Makefile  katas.cabal  stack.yaml
